<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fontFamily="@font/roboto"
    android:background="@drawable/frame_border"
    android:padding="15dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="125dp"/>

    <ImageView
        style="@style/img_footer"/>

    <TextView
        style="@style/txv_footer"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="270dp"
        android:background="@color/white">

        <Button
            android:id="@+id/btnEnterMain"
            android:layout_marginTop="130dp"
            android:text="@string/btn_enter"
            android:layout_gravity="center"
            android:backgroundTint="@color/verdeAPP"
            style="@style/btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txv_question"
            android:layout_gravity="center"
            android:textColor="@color/verdeAPP"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/btnRegisterMain"
            android:layout_marginTop="15dp"
            android:text="@string/btn_register"
            android:layout_gravity="center"
            android:backgroundTint="@color/verdeAPP"
            style="@style/btn"></Button>
    </LinearLayout>


</FrameLayout>
