<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:fontFamily="@font/roboto"
    android:background="@drawable/frame_border"
    android:padding="15dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <ImageView
        style="@style/img_footer"/>

    <TextView
        style="@style/txv_footer"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="200dp"
        >

        <TextView
            android:id="@+id/txvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Date"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textColorHint="@color/verdeAPP"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:background="@color/verdeAPP"
            app:cardUseCompatPadding="true">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">


                <LinearLayout
                    android:id="@+id/linlayoutCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    >

                    <ImageView
                        android:id="@+id/imgCategory"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/logo_b"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="16dp">

                    </ImageView>

                    <TextView
                        android:id="@+id/txvCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_category"
                        android:textStyle="bold"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayoutStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/imgStatistics"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/logo_b"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="16dp">

                    </ImageView>

                    <TextView
                        android:id="@+id/txvStatistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_statistics"
                        android:textStyle="bold"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayoutTips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/imgTips"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/logo_b"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="16dp">

                    </ImageView>

                    <TextView
                        android:id="@+id/txvTips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_tips"
                        android:textStyle="bold"
                        android:textSize="25sp"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <Button
        android:id="@+id/btnExitMajor"
        android:layout_marginBottom="120dp"
        android:text="@string/btn_exit"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="@color/verdeAPP"
        style="@style/btn"
        />

</FrameLayout>